# page_parser

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
pageloader/: __init__.py  loader.py  storage.py  url.py
pageloader/scripts/: __init__.py  pageloader.py
tests/: __init__.py  test_loader.py  test_url.py
tests/fixtures/: page_with_links.html  simple_page.html
