[tool.poetry]
name = "krutov_pageloader"
version = "0.1.0"
description = "Page Loader - hexlet third project"
authors = ["Alexander Krutov <madrid211514@gmail.com>"]
packages = [
    { include = "pageloader" },
]
repository = "https://github.com/Krutov777/page_parser"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
isort = "^5.9.3"
mypy = "^0.910"

[tool.poetry.scripts]
pageloader = "pageloader.scripts.pageloader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
